updated working environment

--- a/PLUS_DeepLearning/index.html
+++ b/PLUS_DeepLearning/index.html
@@ -238,7 +238,7 @@
 		<!-- Work Environment-->
 		<section id="Chapter 4.2">
 			<h2> 4.2 How to arrange your work environment</h2>
-			<ul style="text-align: left; font-size:60%; margin-top: 0%;">
+			<ul style="text-align: left; font-size:55%; margin-top: 0%; margin-bottom: 0%;">
 				<li >This course focuses on scripting for Deep Learning.</li>
 				<li>Open the course material and your VM with the programming environment in two separate windows next to each other.</li>
 				<li> The link to the TensorFlow script is available on the course site in the section Course material.</li>
