Correction of typos in index.html

--- a/DeepLearning_updated/index.html
+++ b/DeepLearning_updated/index.html
@@ -654,7 +654,7 @@
 				<h2>7.2.3 Prepare Data on the VM </h2>
 				<div style="text-align: left; font-size: 70%;">
 					<ul>
-					<li >Using the Eo-Lab VM to find data in the connected archive</li>
+					<li >Using the EO-Lab VM to find data in the connected archive</li>
 					
 					<ul>
 						<li>Search for the satellite image based on the date and  the copied link</li>
@@ -698,7 +698,7 @@
 				<div style="text-align: left; font-size: 60%; width: 70%">
 					<ul>
 						<li>Framework for datastream oriented programming with a focus on machine learning</li>
-						<li> Pyhton-based and open-sourced</li>
+						<li> Python-based and open-sourced</li>
 						<li> Enables usage of GPUs</li>
 						<li> TensorFlow: based on tensors (matrices)</li>
 						<ul>
@@ -706,7 +706,7 @@
 							<li> Picture width: 5</li>
 							<li> channels/ layers: 3 (can be bands containg spectral information but also semantic information such as labels)</li>
 						</ul>
-						<li> More informations: <a href="http://devseed.com/tensorflow-eo-training/docs/Lesson1a_Intro_ML_NN_DL.html"> Tensorflow- EO- Training</a></li>
+						<li> More information: <a href="http://devseed.com/tensorflow-eo-training/docs/Lesson1a_Intro_ML_NN_DL.html"> Tensorflow- EO- Training</a></li>
 					</ul>
 				</div>
 				<div>
@@ -956,7 +956,7 @@
 <section id="Chapter 8.0" >
 	<section data-background-image="./Images/Satellitenaufnahme_total.jpg" data-background-opacity=1 data-background-size="100" data-background-repeat="no-repeat" >
 		
-			<h2 style="color:rgb(0, 119, 255); background-color: white; margin: 5%; ">8. Application example PyTorch </h2>
+			<h2 style="color:rgb(0, 119, 255); background-color: white; margin: 5%; ">8. Application example with PyTorch </h2>
 	
 			
 	</section>
@@ -979,7 +979,7 @@
 		<h2>8.2 PyTorch Installation</h2>
 		<ul style="font-size: 60%;  text-align: left; width: 50%; margin-left: -30%;">
 			<li>
-				Check avilable CUDA libary on your machine	
+				Check avilable CUDA library on your machine	
 				<ul style="font-size: 90%;">
 					<li>
 						Windows: Got to control panel
@@ -989,7 +989,7 @@
 					</li>
 				</ul>
 				<li>
-					Select corresponding PyTorch version on <a href=" https://pytorch.org/ "></a>
+					Select corresponding PyTorch version on <a href=" https://pytorch.org/ "> PyTorch.org</a>
 
 				</li>
 				<li>
