--- a/DeepLearning_updated/index.html
+++ b/DeepLearning_updated/index.html
@@ -962,7 +962,7 @@
 	</section>
 	<!--Pytorch-->
 	<section id="Chapter 8.1 "data-background-color="white">
-		<h2> 8.1 Pytorch</h2>
+		<h2> 8.1 PyTorch</h2>
 		<p style="font-size: 70%;  text-align: left; ">
 			This section shows how PyTorch can be used as an alternative to TensorFlow using the previous example.
 		</p>
@@ -1012,10 +1012,10 @@
 	<h2>8.3 Training data - Synchronize with model</h2>
 	<ul style="font-size: 70%;  text-align: left; width: 50%; margin-left: -30%; margin-top: 5%;">
 		<li>
-			Map - style datasets
+			<a href=" https://pytorch.org/docs/stable/data.html#map-style-datasets "> Map - style datasets</a> 
 		</li>
 		<li>
-			Iterable - style datasets
+			<a href=" https://pytorch.org/docs/stable/data.html#iterable-style-datasets "> Iterable - style datasets</a>
 
 		</li>
 			
@@ -1047,7 +1047,7 @@
 			User-defined models(regression, classification, and detection)
 		</li>
 		<li>
-			Built-in models with pre-trained weights from torchvision
+			Built-in models with pre-trained weights from <a href=" https://pytorch.org/vision/stable/index.html "> torchvision </a>
 		</li>
 
 	</ul>
