--- a/DeepLearning_updated/index.html
+++ b/DeepLearning_updated/index.html
@@ -963,12 +963,35 @@
 	<!--Pytorch-->
 	<section id="Chapter 8.1 "data-background-color="white">
 		<h2> 8.1 PyTorch</h2>
-		<p style="font-size: 70%;  text-align: left; ">
-			This section shows how PyTorch can be used as an alternative to TensorFlow using the previous example.
-		</p>
-		<figure >
+		<ul style="font-size: 70%;  text-align: left; width: 60%; margin-left: -10%;">
+			<li>
+				Purpose:
+
+				<ul>
+					<li>
+						Prepare a Deep Learning model in PyTorch for land cover classification
+					</li>
+				</ul>
+			</li>
+			<li>
+				PyTorch:
+				<ul>
+					<li>
+						Tensor libary for DL using GPUs and CPUs 
+					</li>
+					<li>
+						Enables computer vision applications with EO data 
+					</li>
+					<li>
+						More information on <a href="https://pytorch.org/"> PyTorch.org</a>
+					</li>
+				</ul>
+			</li>
+		</ul>
 			
-			<img src="./Images/PyTorch_Logo.png" style="width:30%; background: none; border: none; box-shadow: none;" >
+		<figure style="position: absolute; right: -10%; top:25%">
+			
+			<img src="./Images/PyTorch_Logo.png" style="width:80%; background: none; border: none; box-shadow: none;" >
 		</figure>
 
 
