Updated PyTorch Script in HTML file

--- a/DeepLearning_updated/plugin/EO-Lab_Pytorch_script_example.html
+++ b/DeepLearning_updated/plugin/EO-Lab_Pytorch_script_example.html
@@ -14579,7 +14579,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Importing-Necessary-libaries">Importing Necessary libaries<a class="anchor-link" href="#Importing-Necessary-libaries">&#182;</a></h1><h4 id="Assuming-libaries-like-torch,-torchvision,-torchmetrics,-numpy-and-rasterio-are-installed-in-the-environment">Assuming libaries like torch, torchvision, torchmetrics, numpy and rasterio are installed in the environment<a class="anchor-link" href="#Assuming-libaries-like-torch,-torchvision,-torchmetrics,-numpy-and-rasterio-are-installed-in-the-environment">&#182;</a></h4>
+<h1 id="Setup:-Importing-Necessary-Libraries">Setup: Importing Necessary Libraries<a class="anchor-link" href="#Setup:-Importing-Necessary-Libraries">&#182;</a></h1><h4 id="Assuming-libraries-like-torch,-torchvision,-torchmetrics,-numpy-and-rasterio-are-installed-in-the-environment">Assuming libraries like torch, torchvision, torchmetrics, numpy and rasterio are installed in the environment<a class="anchor-link" href="#Assuming-libraries-like-torch,-torchvision,-torchmetrics,-numpy-and-rasterio-are-installed-in-the-environment">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -14649,7 +14649,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Import-Training-Image">Import Training Image<a class="anchor-link" href="#Import-Training-Image">&#182;</a></h2>
+<h2 id="Data:-Import-Training-Image">Data: Import Training Image<a class="anchor-link" href="#Data:-Import-Training-Image">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -14683,7 +14683,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Import-Labels">Import Labels<a class="anchor-link" href="#Import-Labels">&#182;</a></h2>
+<h2 id="Data:-Import-Labels">Data: Import Labels<a class="anchor-link" href="#Data:-Import-Labels">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -14722,7 +14722,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Array-partitioning-for-train-test-sample-chips">Array partitioning for train test sample chips<a class="anchor-link" href="#Array-partitioning-for-train-test-sample-chips">&#182;</a></h2><h6 id="custom-function-is-required-to-partition-array-or-samples-in-pytorch-environemnet">custom function is required to partition array or samples in pytorch environemnet<a class="anchor-link" href="#custom-function-is-required-to-partition-array-or-samples-in-pytorch-environemnet">&#182;</a></h6>
+<h2 id="Data:-Array-partitioning-for-train-test-sample-chips">Data: Array partitioning for train test sample chips<a class="anchor-link" href="#Data:-Array-partitioning-for-train-test-sample-chips">&#182;</a></h2><h6 id="custom-function-is-required-to-partition-array-or-samples-in-pytorch-environemnet">custom function is required to partition array or samples in pytorch environemnet<a class="anchor-link" href="#custom-function-is-required-to-partition-array-or-samples-in-pytorch-environemnet">&#182;</a></h6>
 </div>
 </div>
 </div>
@@ -14766,7 +14766,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Prepare-pytorch-data-loader">Prepare pytorch data loader<a class="anchor-link" href="#Prepare-pytorch-data-loader">&#182;</a></h1><p>for smooth training, data flow and memory usage, pytorch has dataset and dataloader class which is designed to be customized as our data structure and training procedure, example below is the custom dataset class amended to take data from image and labels of which are torch tensors</p>
+<h1 id="Data:-Prepare-pytorch-data-loader">Data: Prepare pytorch data loader<a class="anchor-link" href="#Data:-Prepare-pytorch-data-loader">&#182;</a></h1><p>for smooth training, data flow and memory usage, pytorch has dataset and dataloader class which is designed to be customized as our data structure and training procedure, example below is thecustomdataset class amended to take data from image and labels of which are torch tensors</p>
 
 </div>
 </div>
@@ -14812,7 +14812,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Prepare-FCN_ResNet-Model">Prepare FCN_ResNet Model<a class="anchor-link" href="#Prepare-FCN_ResNet-Model">&#182;</a></h1><h6 id="see-https://pytorch.org/vision/0.11/models.html-for-further-notes">see <a href="https://pytorch.org/vision/0.11/models.html">https://pytorch.org/vision/0.11/models.html</a> for further notes<a class="anchor-link" href="#see-https://pytorch.org/vision/0.11/models.html-for-further-notes">&#182;</a></h6>
+<h1 id="Model:-Prepare-FCN_ResNet-Model">Model: Prepare FCN_ResNet Model<a class="anchor-link" href="#Model:-Prepare-FCN_ResNet-Model">&#182;</a></h1><h6 id="see-https://pytorch.org/vision/0.11/models.html-for-further-notes">see <a href="https://pytorch.org/vision/0.11/models.html">https://pytorch.org/vision/0.11/models.html</a> for further notes<a class="anchor-link" href="#see-https://pytorch.org/vision/0.11/models.html-for-further-notes">&#182;</a></h6>
 </div>
 </div>
 </div>
