--- a/DeepLearning_updated/index.html
+++ b/DeepLearning_updated/index.html
@@ -685,8 +685,8 @@
 				</div>
 				<div>
 					<figure style="float: left; position: absolute; left:-5%; margin-top: 0%; ">
-						<img src="./Images/AOI_images.png" style=" background: none; border: none; box-shadow: none; width: 80%; ">
-						<img src="./Images/AOI_label.png" style="margin-top: 0%; background: none; border: none; box-shadow: none; width:90%; position: absolute; right: -80%; bottom: 3% ">
+						<img src="./Images/AOI_images.png" style=" background: none; border: none; box-shadow: none; width: 70%; bottom: 8% ">
+						<img src="./Images/AOI_label.png" style="margin-top: 0%; background: none; border: none; box-shadow: none; width:79%; position: absolute; right: -64%; bottom: 4% ">
 					</figure>
 				</div>
 				
@@ -1033,7 +1033,7 @@
 
 <section id="Chapter 8.3 "data-background-color="white">
 	<h2>8.3 Training data - Synchronize with model</h2>
-	<ul style="font-size: 70%;  text-align: left; width: 50%; margin-left: -30%; margin-top: 5%;">
+	<ul style="font-size: 70%;  text-align: left; width: 50%; margin-left: -30%; margin-top: 5%;margin-bottom: 0%;">
 		<li>
 			<a href=" https://pytorch.org/docs/stable/data.html#map-style-datasets "> Map - style datasets</a> 
 		</li>
@@ -1043,8 +1043,8 @@
 		</li>
 			
 			</ul>
-	<figure style="position: absolute; left: -10%; top: 40%; width: 150%" >
-		<img src="./Images/Utilis_Data_PyTorch.PNG" style="width:30%; background: none; border: none; box-shadow: none;" >
+	<figure  >
+		<img src="./Images/Utilis_Data_PyTorch.PNG" style="width:60%; background: none; border: none; box-shadow: none;" >
 		
 	</figure>
 
@@ -1076,7 +1076,7 @@
 	</ul>
 	<figure >
 		
-		<img src="./Images/Torchvision.PNG" style="width:80%; background: none; border: none; box-shadow: none; margin-top: 2%;" >
+		<img src="./Images/Torchvision.PNG" style="width:70%; background: none; border: none; box-shadow: none; margin-top: 2%;" >
 	</figure>
 
 
