--- a/DeepLearning_updated/index.html
+++ b/DeepLearning_updated/index.html
@@ -1453,7 +1453,7 @@
 			
 		
 	</div>
-	<div class="footer" style="position: absolute; bottom: 2%; ">
+	<div class="footer" style="position: absolute; bottom: 0%; margin-top: 2%; ">
 			
 		<audio controls id='audio'  >
 			<source src='./audio/'  type="audio/mp3"> </source>
